# BiTTs

./: .gitignore  INSTALL.txt  Makefile  README.md  REQUIREMENTS.txt  STATUS.txt  bitt.opam  bitts.opam  dune-project  test.thry  test2.thry
docker/: Dockerfile
examples/: big-numbers.bitt  big-numbers.bitts  exceptional-multiverse.bitts  exceptional.bitts  hol-light.bitt  hol-light.bitts  hol.bitt  hol.bitts  lambda-mu.bitts  mltt-coquand.bitt  mltt-coquand.bitts  mltt-funext-canonicity.bitts  mltt-russell-2.bitts  mltt-russell.bitt  mltt-russell.bitts  mltt-tarski-heterogeneous.bitt  mltt-tarski-heterogeneous.bitts  mltt-tarski.bitt  mltt-tarski.bitts  mltt.bitt  mltt.bitts  observational-type-theory-2.bitts  observational-type-theory.bitts  ott-2.bitts  ott.bitt  ott.bitts
src/: bitt.ml  bitts.ml  common.ml  complf.ml  concrete.ml  concrete.mli  dune  eval.ml  eval.mli  handler.ml  lexer.mll  main.ml  parser.mly  rewtyping.ml  sedlexer.ml  sedlexer.mli  term.ml  term.mli  tests.ml  typing.ml  typing.mli  value.ml  value.mli
test/: basic-mltt-all-infer.complf  basic-mltt.complf  big_numbers.complf  coquand_univ_cumul.complf  hol.complf  intro.complf  mltt-coquand-universes-and-univpoly.complf  mltt-cumul.complf  mltt-cumulative-and-univpoly.complf  mltt-univpoly.complf  mltt.complf  quick-intro.complf  quick_intro.complf  test.complf  univ.complf
